@@ -1,3 +1,8 @@
+2000-05-15  Dave Peticolas  <peticola@cs.ucdavis.edu>
+
+	* src/engine/guid/md5.c (md5_process_bytes): fix 32-bit alignment
+	bug.
+
 2000-05-14  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
 	* src/guile/guile-util.c: added several interface functions to
